[project]
name = "RandomStaff"
version = "1.0"
description = ""
readme = "README.md"
requires-python = ">=3.14"

[dependency-groups]
emoji_paste = [
    "emoji",
]
steam_switch = [
    "aiohttp",
    "pydantic",
    "typer",
]
yandex_music_writer = [
    "environs",
    "keyboard",
    "yandex-music",
]
