[project]
name = "RandomStaff"
version = "1.0"
description = ""
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "altair",
    "httpx",
    "pandas",
    "selectolax",
    "streamlit",
]

[dependency-groups]
ege_graph = [
    "altair",
    "httpx",
    "pandas",
    "selectolax",
    "streamlit",
]
emoji_paste = [
    "emoji",
]
steam_switch = [
    "aiohttp",
    "pydantic",
    "typer",
]
yandex_music_writer = [
    "environs",
    "keyboard",
    "yandex-music",
]

[tool.pyright]
ignore = ["*"]
